[gd_scene load_steps=8 format=3 uid="uid://dkgsosm4qwsbf"]

[ext_resource type="Script" path="res://scripts/weapons/BaseWeapon.gd" id="1_ilb8w"]
[ext_resource type="Script" path="res://scripts/weapons/WeaponRangeArea.gd" id="2_7qw5b"]
[ext_resource type="Script" path="res://scripts/weapons/WeaponRangeCollider.gd" id="2_xlqba"]
[ext_resource type="PackedScene" uid="uid://dcf2kgmbao60" path="res://scenes/weapons/powerups/WeaponPowerupSystem.tscn" id="4_kkbd4"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_b1t5e"]
height = 1.0
radius = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0u0sa"]
transparency = 3
alpha_hash_scale = 0.0
alpha_antialiasing_mode = 0
albedo_color = Color(0.396078, 0.635294, 0.494118, 0.380392)

[sub_resource type="TorusMesh" id="TorusMesh_ghhmf"]
material = SubResource("StandardMaterial3D_0u0sa")
inner_radius = 9.8
outer_radius = 10.0

[node name="BaseWeapon" type="Node3D"]
script = ExtResource("1_ilb8w")
weapon_range = 5.0

[node name="WeaponRangeArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("2_7qw5b")

[node name="WeaponRangeCollider" type="CollisionShape3D" parent="WeaponRangeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_b1t5e")
script = ExtResource("2_xlqba")

[node name="DEBUG_range" type="MeshInstance3D" parent="WeaponRangeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.368022, 0)
mesh = SubResource("TorusMesh_ghhmf")

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="WeaponPowerupSystem" parent="." instance=ExtResource("4_kkbd4")]

[connection signal="found_enemies" from="WeaponRangeArea" to="." method="_on_weapon_range_area_found_enemies"]
